# ai-engineering

./: .gitignore  pyproject.toml
src/: ztm_embeddings.ipynb
src/basics/: playground.ipynb
src/gradio/: gradio.ipynb
src/huggingface/: one.ipynb
src/langchain/: prompt_chains.ipynb
src/multi_modal/: mutli_modal.ipynb
src/openai/: openai.ipynb
src/rag/: rag1.ipynb  rag2.ipynb
src/ztm/: openai.ipynb
src/ztm/essentials/: essentials.ipynb
